<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gameActivity"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="602dp"
        android:gravity="center"
        android:text="@string/write_the_correct_answers"
        android:textSize="26sp"
        android:id="@+id/textViewstatic"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="157dp"
        android:textSize="24sp"
        android:hint="@string/enter_results_here"
        android:inputType="number"
        android:text=""
        android:id="@+id/et_answers"

        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/firstNumbertxt"
        android:layout_width="132dp"
        android:layout_height="103dp"
        android:layout_above="@+id/et_answers"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="214dp"
        android:layout_marginEnd="240dp"
        android:layout_marginRight="240dp"
        android:layout_marginBottom="202dp"
        android:textSize="48sp"
        android:text=""
        android:gravity="center"
        />

    <TextView
        android:id="@+id/secondNumbertxt"
        android:layout_width="132dp"
        android:layout_height="103dp"
        android:layout_above="@+id/et_answers"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="246dp"
        android:layout_marginLeft="246dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="200dp"
        android:textSize="48sp"
        android:text=""
        android:gravity="center"

        />

    <TextView
        android:id="@+id/operatortxt"
        android:layout_width="132dp"
        android:layout_height="103dp"
        android:layout_above="@+id/et_answers"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="138dp"
        android:layout_marginLeft="138dp"
        android:layout_marginTop="214dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginBottom="202dp"
        android:gravity="center"
        android:text=""

        android:textSize="48sp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="264dp"
        android:layout_marginLeft="264dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:layout_marginBottom="259dp"
        android:background="#8B8686"
        android:text="@string/submit"
        android:textSize="26sp" />


    <TextView
        android:id="@+id/et_points"
        android:layout_width="33dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_answers"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="139dp"
        android:layout_marginBottom="49dp"
        android:text="@string/_0"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/scoreTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginBottom="261dp"
        android:text="@string/score1"
        android:textSize="26sp" />


</RelativeLayout>