<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".playActivity"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/titleScoreTextView"
        android:layout_width="150dp"
        android:layout_height="105dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="118dp"
        android:layout_marginLeft="118dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="143dp"
        android:layout_marginRight="143dp"
        android:layout_marginBottom="588dp"
        android:gravity="center"
        android:text="@string/your_score"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/et_scoreTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="290dp"
        android:layout_marginLeft="308dp"
        android:layout_marginTop="281dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="370dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/et_scoreCorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="281dp"
        android:layout_marginEnd="290dp"
        android:layout_marginRight="290dp"
        android:layout_marginBottom="370dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/correctAnswerstextView"
        android:layout_width="150dp"
        android:layout_height="105dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="244dp"
        android:layout_marginRight="241dp"
        android:layout_marginBottom="461dp"
        android:gravity="center"
        android:text="@string/correct_answers"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/totalScoretextView"
        android:layout_width="150dp"
        android:layout_height="105dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="244dp"
        android:layout_marginLeft="244dp"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="461dp"
        android:gravity="center"
        android:text="@string/number_of_answers"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/answerRatiotextView"
        android:layout_width="150dp"
        android:layout_height="105dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="385dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="145dp"
        android:layout_marginBottom="240dp"
        android:gravity="center"
        android:text="@string/correct_answer_ratio_in"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/et_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="131dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textSize="26sp" />

</RelativeLayout>