<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".helpActivity"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="652dp"
        android:gravity="center"
        android:text="@string/information_about_the_application"
        android:textSize="28sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="565dp"
        android:gravity="center"
        android:text="@string/answering_a_question_yields_one_point_you_can_see_the_points_in_the_game_screen_or_in_the_score_menu"
        android:textSize="18sp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="602dp"
        android:layout_marginBottom="73dp"
        android:gravity="center"
        android:text="@string/current_android_version"
        android:textSize="18sp"
        android:layout_marginLeft="11dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vname"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="207dp"
        android:layout_marginTop="628dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="47dp"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="207dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/vcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="207dp"
        android:layout_marginTop="577dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="98dp"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="207dp"
        android:layout_marginRight="6dp" />


</RelativeLayout>